# capra

./: .gitignore  README.md  env.sh  setup.sh  update.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/image_exposure_msgs/: ExposureSequence.h  ImageExposureStatistics.h  SequenceExposureStatistics.h
devel/include/pointgrey_camera_driver/: PointGreyConfig.h
devel/include/statistics_msgs/: Stats1D.h
devel/include/vectornav/: gps.h  ins.h  sensors.h  sync_in.h  utc_time.h
devel/include/wfov_camera_msgs/: WFOVCompressedImage.h  WFOVImage.h  WFOVTrigger.h
launch/: sim_IGVC_basic.launch  sim_igvc.launch
launch/tools/: calibrate_vision_sim.launch
rosinstall/: capra.rosinstall
rviz_cfg/: calibrate.rviz  mapping.rviz  move_base.rviz
script/: install.sh  install.sh-old
script/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
script/src/: .rosinstall
src/: .rosinstall
src/animatics_smart_motor/launch/: SmartMotor.launch
src/capra_2dnav/: CMakeLists.txt
src/capra_2dnav/launch/: capra_configuration.launch  move_base.launch
src/capra_ai/: CMakeLists.txt  package.xml
src/capra_filters/: CMakeLists.txt
src/capra_gps/: CMakeLists.txt
src/capra_imu/: CMakeLists.txt  package.xml
src/capra_lidar/: CMakeLists.txt  package.xml
src/roboteq_motor/: CMakeLists.txt  package.xml
src/roboteq_motor/launch/: RoboteqMotor.launch  RoboteqMotorUrial.launch  roboteq_motor.launch  test.launch
src/roboteq_motor/scripts/: config.py  motor.py  motor_conductor.py  motor_test.py  roboteq_motor_node.py
src/roboteq_motor/src/: roboteq_motor_node.cpp
(+104 files in other folders)
