<?xml version="1.0"?>
<package>
  <name>roboteq_motor</name>
  <version>0.0.0</version>
  <description>The roboteq_motor package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
